--- a/hard.css
+++ b/hard.css
@@ -9,9 +9,62 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background-image: url('img/bg.jpg');
     background-size: cover;
 }
+
+body {
+    background-image: url("img/pexels-david-bartus-1166209.jpg");
+    background-size: cover;
+    animation: slidein 100s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+  
+@keyframes slidein {
+    from {
+      background-position: top;
+      background-size: 3000px;
+    }
+    to {
+      background-position: -100px 0px;
+      background-size: 2750px;
+    }
+}
+  
+.center {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;    
+} 
+  
+.waviy {
+    position: relative;
+    font-weight: bold;
+    margin-top: 50px;
+    font-family: Georgia, serif;
+}
+
+.waviy span {
+    position: relative;
+    display: inline-block;
+    font-size: 40px;
+    color: #fff;
+    text-transform: uppercase;
+    animation: flip 2s infinite;
+    animation-delay: calc(.2s * var(--i))
+}
+
+@keyframes flip {
+    0%,80% {
+      transform: rotateY(360deg) 
+    }
+}  
 
 .container {
     width: 1200px;
