--- a/medium.css
+++ b/medium.css
@@ -94,12 +94,12 @@ body {
     transform: rotateY(-180deg);
 }
 
-.memory-card:hover .front-view {
+.memory-card.flip .front-view {
     /* Flip card */
     transform: rotateY(180deg); 
 }
 
-.memory-card:hover .back-view {
+.memory-card.flip .back-view {
     /* Flip card */
     transform: rotateY(0); 
 }
@@ -122,3 +122,31 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+.memory-card.shake {
+    animation: shake 0.35s ease-in-out;
+  }
+  
+  @keyframes shake {
+  
+    0%,
+    100% {
+      transform: translateX(0);
+    }
+  
+    20% {
+      transform: translateX(-13px);
+    }
+  
+    40% {
+      transform: translateX(13px);
+    }
+  
+    60% {
+      transform: translateX(-8px);
+    }
+  
+    80% {
+      transform: translateX(8px);
+    }
+  }
